; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/processor-trace/libipt/test/src/extr_ptunit-config.c_cpu_errata_null.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/processor-trace/libipt/test/src/extr_ptunit-config.c_cpu_errata_null.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ptunit_result = type { i32 }
%struct.pt_errata = type { i32 }
%struct.pt_cpu = type { i32 }

@pte_invalid = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @cpu_errata_null to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @cpu_errata_null() #0 {
  %1 = alloca %struct.ptunit_result, align 4
  %2 = alloca %struct.pt_errata, align 4
  %3 = alloca %struct.pt_cpu, align 4
  %4 = alloca i32, align 4
  %5 = call i32 @pt_cpu_errata(%struct.pt_errata* %2, %struct.pt_cpu* null)
  store i32 %5, i32* %4, align 4
  %6 = load i32, i32* %4, align 4
  %7 = load i32, i32* @pte_invalid, align 4
  %8 = sub nsw i32 0, %7
  %9 = call i32 @ptu_int_eq(i32 %6, i32 %8)
  %10 = call i32 @pt_cpu_errata(%struct.pt_errata* null, %struct.pt_cpu* %3)
  store i32 %10, i32* %4, align 4
  %11 = load i32, i32* %4, align 4
  %12 = load i32, i32* @pte_invalid, align 4
  %13 = sub nsw i32 0, %12
  %14 = call i32 @ptu_int_eq(i32 %11, i32 %13)
  %15 = call i32 (...) @ptu_passed()
  %16 = getelementptr inbounds %struct.ptunit_result, %struct.ptunit_result* %1, i32 0, i32 0
  store i32 %15, i32* %16, align 4
  %17 = getelementptr inbounds %struct.ptunit_result, %struct.ptunit_result* %1, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  ret i32 %18
}

declare dso_local i32 @pt_cpu_errata(%struct.pt_errata*, %struct.pt_cpu*) #1

declare dso_local i32 @ptu_int_eq(i32, i32) #1

declare dso_local i32 @ptu_passed(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
